# FairCMakeModules

./: .gitlint  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  FairCMakeModules_test.cmake  README.md  index.html
.github/: dependabot.yml
.github/workflows/: docs.yml  test.yml
PR-/: development.html  index.html  installation.html  usage.html
PR-/.doctrees/: changelog.doctree  development.doctree  environment.pickle  index.doctree  usage.doctree
PR-/.doctrees/module/: FairSummary.doctree
PR-/_sources/: changelog.rst.txt  development.rst.txt
PR-/module/: FairSummary.html
PR-16/: .buildinfo  changelog.html  genindex.html  installation.html  issues.html  license.html  objects.inv  search.html  searchindex.js
PR-16/.doctrees/: environment.pickle  license.doctree
PR-16/.doctrees/module/: FairFindPackage2.doctree  FairFormattedOutput.doctree
PR-16/_sources/: usage.rst.txt
PR-16/module/: FairFindPackage2.html  FairFormattedOutput.html
cmake/: FairCMakeModulesConfig.cmake.in  TestLib.cmake  TestLibMockMessage.cmake
docs/: CMakeLists.txt  cmake.py  conf.py.in  development.md  development.rst  index.rst  installation.rst  issues.rst
docs/module/: FairFindPackage2.rst  FairFormattedOutput.rst  FairSummary.rst
latest/: .buildinfo  changelog.html  development.html  genindex.html  index.html  installation.html  issues.html  license.html  objects.inv  search.html  searchindex.js  support.html  usage.html
latest/.doctrees/: changelog.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  issues.doctree  license.doctree  support.doctree  usage.doctree
latest/.doctrees/command/: find_package.doctree
latest/.doctrees/module/: FairFindPackage2.doctree  FairFormattedOutput.doctree  FairProjectConfig.doctree  FairSummary.doctree
latest/.doctrees/modules/: FairFindPackage2.doctree
latest/_sources/: changelog.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt  license.rst.txt  usage.rst.txt
latest/_sources/command/: find_package.rst.txt
latest/_sources/module/: FairFormattedOutput.rst.txt  FairProjectConfig.rst.txt  FairSummary.rst.txt
latest/_sources/modules/: FairFindPackage2.rst.txt
latest/command/: find_package.html
latest/module/: FairFindPackage2.html  FairFormattedOutput.html  FairProjectConfig.html  FairSummary.html
latest/modules/: FairFindPackage2.html
public/: CMakeLists.txt
src/: CMakeLists.txt
src/modules/: FairFindPackage2.cmake.in  FairFormattedOutput.cmake  FairProjectConfig.cmake  FairSummary.cmake
tests/: CMakeLists.txt  MockPkgConfig.cmake.in  include_in_project_mode.sh  include_with_version.cmake  run_demo.sh  test_module.cmake
tests/FairFindPackage2/: CMakeLists.txt  fair_generate_package_dependencies_simple.cmake  find_package2_implicit_dependencies_simple.cmake  find_package2_lcp.cmake  find_package2_merge_requirements.cmake  find_package2_simple.cmake
tests/FairFindPackage2/FooBar-1.2.3/: FooBarConfig.cmake  FooBarConfigVersion.cmake
tests/FairFormattedOutput/: CMakeLists.txt  fair_pad_simple.cmake
tests/FairSummary/: CMakeLists.txt  fair_summary_build_types_simple.cmake  fair_summary_global_cxx_flags_standard_simple.cmake  fair_summary_package_dependencies_simple.cmake
tests/demo1/: CMakeLists.txt
tests/project_mode_include/: CMakeLists.txt
