################################################################################
#    Copyright (C) 2021 GSI Helmholtzzentrum fuer Schwerionenforschung GmbH    #
#                                                                              #
#              This software is distributed under the terms of the             #
#              GNU Lesser General Public Licence (LGPL) version 3,             #
#                  copied verbatim in the file "LICENSE"                       #
################################################################################

install(
  FILES
  modules/FairFindPackage2.cmake

  DESTINATION "${PROJECT_INSTALL_MODULESDIR}"
)
